virt/anp_allow-https-deny-http.yaml
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-https-everywhere
spec:
  priority: 5
  subject:
    namespaces:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: Exists
  ingress:
    - name: allow-https
      action: Allow
      from:
        - namespaces:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: Exists
      ports:
        - portNumber:
            port: 443
            protocol: TCP
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: deny-http-everywhere
spec:
  priority: 10
  subject:
    namespaces:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: Exists
  ingress:
    - name: deny-http
      action: Deny
      from:
        - namespaces:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: Exists
      ports:
        - portNumber:
            port: 80
            protocol: TCP
